--- a/homework/templates/deployment-frontapp.yaml
+++ b/homework/templates/deployment-frontapp.yaml
@@ -58,7 +58,7 @@ spec:
               containerPort: {{ .Values.service.port }}
               protocol: TCP          
           resources:
-            {{- toYaml . | nindent 12 }}
+            {{- toYaml .Values.resources | nindent 12 }}
           {{- with .Values.volumeMounts }}
           volumeMounts:
             {{- toYaml . | nindent 12 }}
